ec2.tf
 /*resource "aws_instance" "example"{
    count = 3
    ami = "ami-00b8917ae86a424c9"
    instance_type = "t2-micro"
    subnet_id = "var.subnet_id"

    tags = {
        name = "example"
    }
  
}  */
